--- a/index.html
+++ b/index.html
@@ -2,25 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ip-address.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | IP Address Tracker</title>
   </head>
   <body>
-    IP Address Tracker
-
-    Search for any IP address or domain
-  
-    IP Address
-    Location
-    Timezone
-      UTC <!-- add offset value dynamically using the API -->
-    ISP
     <div id="root"></div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://hectorcontreras.netlify.app/">Hector Contreras</a>.
-    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
