--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ip-address.png" />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
-  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | IP Address Tracker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="relative z-10 "></div>
+    <div id="map" class="relative z-0 "> </div> 
+    <!--colo el footer aqui nomas porque en el root o app.jsx se lo come el map-->
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://hectorcontreras.netlify.app/">Hector Contreras</a>.
+    </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
