--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="root" class="relative z-10 "></div>
     <div id="map" class="relative z-0 "> </div> 
-    <!--colo el footer aqui nomas porque en el root o app.jsx se lo come el map-->
+    <!--coloco el footer aqui nomas porque en el root o app.jsx se lo come el map-->
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://hectorcontreras.netlify.app/">Hector Contreras</a>.
